test/functions/operatorOverloads/errors/namedOperator.future
bug: arbitrary operator names are permitted (and resolvable when standalone)

#17853
